Changes made upto section-3

--- a/church website/styles.css
+++ b/church website/styles.css
@@ -1,6 +1,6 @@
 body{
     width: 100%;
-    /* overflow-x: hidden; */
+    overflow-x: hidden;
     padding: 0;
     margin: 0;
 }
@@ -15,6 +15,11 @@ body{
 .logo{
     margin-left: 20px;
     margin-top: 10px;
+}
+.section-1{
+    margin-top: 2.5rem;
+    position: relative;
+    height: 838px;
 }
 
 .nav-items{
@@ -40,52 +45,34 @@ a{
 }
 
 .sign-in a{
-    color: #D5722D;
+    color:#D5722D
 }
 
-.section-1{
-    margin-top: 2.5rem;
-    position: relative;
+.sign-in:hover{
+    background-color: #D5722D;
 }
-
-.text1{
-    position: absolute;
-    bottom: 178px;
-    left: 75px;
-    font-size: 40px;
-    font-weight: 900;
-    font-family: 'Montserrat', sans-serif;
-    color: white;
+.sign-in:hover a{
+    color: #fff;
 }
-.text2{
-    position: absolute;
-    bottom: 80px;
-    left: 75px;
-    font-size: 40px;
-    font-weight: 300;
-    font-family: 'Montserrat', sans-serif;
-    margin-top: 30px;
-    color: white;
-}
-
-.text3{
-    color: white;
-    position: absolute;
-    bottom: 63px;
-    font-size: 23px;
-    left: 75px;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 100;
-}
+/* section-2 */
+/* welcome-text */
 .arrow{
-    position: absolute;
-    bottom: 85px;
-    right: 50px;
+    display: flex;
+    align-items: center;
+    padding-top: 160px;
+}
+.welcome-arrow{
+    display: flex;
+    justify-content: space-between;
+    transform: translate(12px, -430px);
+    color: #fff;
+    margin-left: 25px;
+    font-family: 'Montserrat', sans-serif;
 }
 .logo-center{
     text-align: center;
     font-size: small;
-    margin-top: 35px;
+    margin-top: 57px;
 }
 .section-2{
     /* text-align: center; */
@@ -99,7 +86,7 @@ a{
 }
 
 a:hover{
-    font-weight: 900;
+    font-weight: 300;
     color: #D5722D;
 }
 .info{
@@ -132,6 +119,7 @@ a:hover{
     width: 96%;
     margin-top: 54px;
   }
+/* section-3 */
   .section-3{
     margin-left: 39px;
   }
@@ -139,14 +127,54 @@ a:hover{
     color: #D5722D;
     font-size: 36px;
     font-weight: 600;
+    margin-left: 50px;
   }
 .box-1{
-    width: 370px;
-    height: 555px;
+    width: 296px;
+    height: max-content;
     border: 2px solid #D5722D;
-    border-radius: 10px;
+    border-radius: 45px;
     padding: 10px 15px;
 }
-.bible-img{
-    padding-left: -10px;
+.parent-div{
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 58px;
+    margin-left: 70px;
+}
+.box-2{
+    width: 296px;
+    /* height: max-content; */
+    border: 2px solid #D5722D;
+    border-radius: 45px;
+    padding: 10px 15px;
+}
+.box-3{
+    width: 296px;
+    height: max-content;
+    border: 2px solid #D5722D;
+    border-radius: 45px;
+    padding: 10px 15px;
+}
+.bible-img img{
+    width: 352px;
+    margin-left: -25px;
+    height: 200px;
+    margin-top: -30px;
+}
+.fire-img img{
+    width: 287px;
+    margin-left: 5px;
+    margin-top: 17%;
+}
+.cool-waters-img img{
+    width: 247px;
+    margin-left: 24px;
+    height: 155px;
+    margin-top: 38px;
+}
+.common{
+    width: 280px;
+    height: 190px;
 }
