--- a/church website/styles.css
+++ b/church website/styles.css
@@ -13,14 +13,15 @@
         }
         
         .logo {
-            margin-left: 20px;
-            margin-top: 10px;
+            margin-left: 30px;
+            margin-top: 13px;
         }
         
         .section-1 {
             margin-top: 2.5rem;
             position: relative;
             height: 838px;
+            z-index: 1;
         }
         
         .nav-items {
@@ -97,7 +98,7 @@
         }
         
         .items a:hover {
-            font-weight: 300;
+            font-weight: 600;
             color: #D5722D;
         }
         
@@ -131,7 +132,7 @@
         hr {
             border: 3px solid gray;
             border-radius: 9px;
-            width: 96%;
+            width: 100%;
             margin-top: 54px;
         }
         /* section-3 */
@@ -144,13 +145,13 @@
             color: #D5722D;
             font-size: 36px;
             font-weight: 600;
-            margin-left: 50px;
+            /* margin-left: 50px; */
         }
         
         .box-1 {
             width: 296px;
             height: max-content;
-            border: 2px solid #D5722D;
+            border: 3px solid #D5722D;
             border-radius: 45px;
             padding: 10px 15px;
         }
@@ -166,7 +167,7 @@
         .box-2 {
             width: 296px;
             /* height: max-content; */
-            border: 2px solid #D5722D;
+            border: 3px solid #D5722D;
             border-radius: 45px;
             padding: 10px 15px;
         }
@@ -174,7 +175,7 @@
         .box-3 {
             width: 296px;
             height: max-content;
-            border: 2px solid #D5722D;
+            border: 3px solid #D5722D;
             border-radius: 45px;
             padding: 10px 15px;
         }
@@ -208,12 +209,12 @@
         .parent-footer {
             background-color: rgb(42, 40, 39);
             display: flex;
-            padding-top: 11px;
+            padding-top: 20px;
             padding-bottom: 27px;
-            justify-content: center;
+            justify-content: space-around;
             width: 100%;
             gap: 40px;
-            margin-top: 20px;
+            margin-top: 10%;
         }
         
         .contents1 a {
@@ -232,3 +233,63 @@
             font-size: large;
             color: lightblue;
         }
+        /* Drop-down togggle */
+        
+        .dropdown {
+            display: grid;
+            position: absolute;
+            top: 30px;
+            left: 77px;
+            font-size: 13px;
+            background-color: lightgray;
+            border: 1px solid lightgray;
+            padding: 7px 10px;
+            z-index: 2;
+        }
+        
+        .dropdown a {
+            font-size: 15px;
+            padding: 3px;
+            border-bottom: 4px solid #DFDFDF;
+        }
+        
+        .dropdown a:hover {
+            border-color: black;
+        }
+        
+        .display-block {
+            display: block !important;
+        }
+        
+        .display-none {
+            display: none;
+        }
+        
+        .funaab-container {
+            position: relative;
+            display: none;
+        }
+        
+        .funaab-elem {
+            position: absolute;
+            left: -11px;
+            padding: 11px 15px;
+            /* top: 20px; */
+            top: -37px;
+            /* margin: 0px; */
+            background-color: lightgray;
+        }
+        
+        .funaab-menu {
+            padding: 7px 8px !important;
+            display: block;
+        }
+        /* media-queries*/
+        
+        @media(min-width: 668px) {
+            body {
+                max-width: fit-content;
+                position: relative;
+            }
+        }
+        /* mobile-view */
