--- a/church website/styles.css
+++ b/church website/styles.css
@@ -1,295 +1,559 @@
-        body {
-            width: 100vw;
-            overflow-x: hidden;
-            padding: 0;
-            margin: 0;
-        }
-        
-        #nav-bar {
-            display: flex;
-            width: 1200px;
-            height: 75px;
-            justify-content: space-between;
-        }
-        
-        .logo {
-            margin-left: 30px;
-            margin-top: 13px;
-        }
-        
-        .section-1 {
-            margin-top: 2.5rem;
-            position: relative;
-            height: 838px;
-            z-index: 1;
-        }
-        
-        .nav-items {
-            display: flex;
-            align-items: end;
-            margin-right: -100px;
-            list-style-type: none;
-            gap: 45px;
-        }
-        
-        .items a {
-            text-decoration: none;
-            text-align: right;
-            font-size: 20px;
-        }
-        
-        .sign-in {
-            border-radius: 31px;
-            padding: 8px 27px;
-            margin-bottom: -7px;
-            border: solid 3px #D5722D;
-            ;
-            background-color: #ffff;
-        }
-        
-        .sign-in a {
-            color: #D5722D;
-            text-decoration: none;
-            font-size: 18px;
-        }
-        
-        .sign-in:hover {
-            background-color: #D5722D;
-        }
-        
-        .sign-in:hover a {
-            color: #fff;
-        }
-        /* section-2 */
-        /* welcome-text */
-        
-        .arrow {
-            display: flex;
-            align-items: center;
-            padding-top: 160px;
-            margin-right: 25px;
-        }
-        
-        .welcome-arrow {
-            display: flex;
-            justify-content: space-between;
-            transform: translate(12px, -430px);
-            color: #fff;
-            margin-left: 25px;
-            font-family: 'Montserrat', sans-serif;
-        }
-        
-        .logo-center {
-            text-align: center;
-            font-size: small;
-            margin-top: 57px;
-        }
-        
-        .section-2 {
-            /* text-align: center; */
-            margin-top: 10px;
-            border-bottom-right-radius: 10px;
-        }
-        
-        .items a {
-            font-size: 25px;
-            color: black;
-            font-family: 'Montserrat', sans-serif;
-        }
-        
-        .items a:hover {
-            font-weight: 600;
-            color: #D5722D;
-        }
-        
-        .info {
-            margin-left: 2rem;
-            font-family: 'Montserrat', sans-serif;
-            font-size: 20px;
-        }
-        
-        .info h4 {
-            font-size: 32px;
-            margin-bottom: -15px;
-        }
-        
-        .slider-container {
-            width: 100%;
-            overflow: hidden;
-        }
-        
-        .slider {
-            display: flex;
-            transition: transform 1.0s ease;
-            /* Animation speed and ease function */
-        }
-        
-        .slider img {
-            width: 100%;
-            height: auto;
-        }
-        
-        hr {
-            border: 3px solid gray;
-            border-radius: 9px;
-            width: 100%;
-            margin-top: 54px;
-        }
-        /* section-3 */
-        
-        .section-3 {
-            margin-left: 39px;
-        }
-        
-        .section-3 h3 {
-            color: #D5722D;
-            font-size: 36px;
-            font-weight: 600;
-            /* margin-left: 50px; */
-        }
-        
-        .box-1 {
-            width: 296px;
-            height: max-content;
-            border: 3px solid #D5722D;
-            border-radius: 45px;
-            padding: 10px 15px;
-        }
-        
-        .parent-div {
-            position: relative;
-            display: flex;
-            flex-wrap: wrap;
-            gap: 58px;
-            margin-left: 70px;
-        }
-        
-        .box-2 {
-            width: 296px;
-            /* height: max-content; */
-            border: 3px solid #D5722D;
-            border-radius: 45px;
-            padding: 10px 15px;
-        }
-        
-        .box-3 {
-            width: 296px;
-            height: max-content;
-            border: 3px solid #D5722D;
-            border-radius: 45px;
-            padding: 10px 15px;
-        }
-        
-        .bible-img img {
-            width: 352px;
-            margin-left: -25px;
-            height: 200px;
-            margin-top: -30px;
-        }
-        
-        .fire-img img {
-            width: 287px;
-            margin-left: 5px;
-            margin-top: 17%;
-        }
-        
-        .cool-waters-img img {
-            width: 247px;
-            margin-left: 24px;
-            height: 155px;
-            margin-top: 38px;
-        }
-        
-        .common {
-            width: 280px;
-            height: 190px;
-        }
-        /* footer */
-        
-        .parent-footer {
-            background-color: rgb(42, 40, 39);
-            display: flex;
-            padding-top: 20px;
-            padding-bottom: 27px;
-            justify-content: space-around;
-            width: 100%;
-            gap: 40px;
-            margin-top: 10%;
-        }
-        
-        .contents1 a {
-            color: #fff;
-            text-decoration: none;
-            font-family: 'Roboto', sans-serif;
-        }
-        
-        .contents1 {
-            display: grid;
-            gap: 33px;
-            font-family: 'Roboto', sans-serif;
-        }
-        
-        .ft-title {
-            font-size: large;
-            color: lightblue;
-        }
-        /* Drop-down togggle */
-        
-        .dropdown {
-            display: grid;
-            position: absolute;
-            top: 30px;
-            left: 77px;
-            font-size: 13px;
-            background-color: lightgray;
-            border: 1px solid lightgray;
-            padding: 7px 10px;
-            z-index: 2;
-        }
-        
-        .dropdown a {
-            font-size: 15px;
-            padding: 3px;
-            border-bottom: 4px solid #DFDFDF;
-        }
-        
-        .dropdown a:hover {
-            border-color: black;
-        }
-        
-        .display-block {
-            display: block !important;
-        }
-        
-        .display-none {
-            display: none;
-        }
-        
-        .funaab-container {
-            position: relative;
-            display: none;
-        }
-        
-        .funaab-elem {
-            position: absolute;
-            left: -11px;
-            padding: 11px 15px;
-            /* top: 20px; */
-            top: -37px;
-            /* margin: 0px; */
-            background-color: lightgray;
-        }
-        
-        .funaab-menu {
-            padding: 7px 8px !important;
-            display: block;
-        }
-        /* media-queries*/
-        
-        @media(min-width: 668px) {
-            body {
-                max-width: fit-content;
-                position: relative;
-            }
-        }
-        /* mobile-view */
+body {
+    max-width: 100%;
+    overflow-x: hidden;
+    padding: 0;
+    margin: 0;
+}
+
+.main-section {
+    overflow-x: hidden;
+}
+
+#nav-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 2rem;
+    padding: 10px 20px;
+    min-height: 90px;
+}
+
+
+/* .logo {
+           margin-left: 30px;
+           margin-top: 13px;
+       } */
+
+.section-1 {
+    position: relative;
+    z-index: 1;
+    max-height: 882px;
+}
+
+.nav-items {
+    display: flex;
+    /* margin-right: -100px; */
+    list-style-type: none;
+    gap: 45px;
+    align-items: center;
+}
+
+.items a {
+    text-decoration: none;
+    text-align: right;
+    transition: 0.7s ease;
+    font-size: 25px;
+    color: black;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.items a:hover {
+    /* font-weight: 600; */
+    color: #D5722D;
+}
+
+.sign-in {
+    border-radius: 31px;
+    padding: 8px 27px;
+    margin-bottom: -7px;
+    border: solid 3px #D5722D;
+    background-color: #ffff;
+}
+
+.sign-in a {
+    color: #D5722D;
+    text-decoration: none;
+    font-size: 18px;
+    transition: 0.7s ease;
+}
+
+.sign-in:hover {
+    background-color: #D5722D;
+}
+
+.sign-in:hover a {
+    color: #fff;
+}
+
+
+/* Drop-down togggle */
+
+.dropdown {
+    display: grid;
+    position: absolute;
+    top: 30px;
+    left: 77px;
+    font-size: 13px;
+    background-color: lightgray;
+    border: 1px solid lightgray;
+    padding: 7px 10px;
+    z-index: 2;
+}
+
+.dropdown a {
+    font-size: 15px;
+    padding: 3px;
+    border-bottom: 4px solid #DFDFDF;
+}
+
+.dropdown a:hover {
+    border-color: black;
+}
+
+.display-block {
+    display: block !important;
+}
+
+.display-none {
+    display: none;
+}
+
+.funaab-container {
+    position: relative;
+    display: none;
+}
+
+.funaab-elem {
+    position: absolute;
+    left: -11px;
+    padding: 11px 15px;
+    /* top: 20px; */
+    top: -37px;
+    /* margin: 0px; */
+    background-color: lightgray;
+}
+
+.funaab-menu {
+    padding: 7px 8px !important;
+    display: flex;
+}
+
+.hamburger {
+    display: none;
+    cursor: pointer;
+}
+
+.bar {
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    background-color: black;
+}
+
+
+/* section-2 */
+
+
+/* welcome-text */
+
+.arrow {
+    display: flex;
+    align-items: center;
+    padding-top: 160px;
+    margin-right: 25px;
+}
+
+.welcome-text h1 {
+    font-weight: 900;
+    font-size: 120px;
+    margin-bottom: -60px;
+}
+
+.welcome-text h3 {
+    font-size: 40px;
+    font-weight: 600;
+    margin-bottom: -27px;
+}
+
+.welcome-text h4 {
+    font-size: 22px;
+    font-weight: 100;
+}
+
+.welcome-arrow {
+    position: absolute;
+    display: flex;
+    justify-content: space-between;
+    transform: translate(12px, -430px);
+    color: #fff;
+    width: 100%;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.welcome-text {
+    margin-left: 30px;
+}
+
+.logo-center {
+    text-align: center;
+    font-size: small;
+    margin-top: 57px;
+}
+
+.section-2 {
+    margin-top: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.info {
+    margin-left: 2rem;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 20px;
+}
+
+.info h4 {
+    font-size: 32px;
+    margin-bottom: -15px;
+}
+
+.slider-container {
+    width: 100%;
+    overflow: hidden;
+}
+
+.slider {
+    display: flex;
+    transition: transform 1.0s ease;
+    /* Animation speed and ease function */
+}
+
+.slider img {
+    width: 100%;
+    height: auto;
+}
+
+hr {
+    border: 3px solid gray;
+    border-radius: 9px;
+    width: 100%;
+    margin-top: 54px;
+}
+
+
+/* section-3 */
+
+.section-3 {
+    margin-left: 39px;
+}
+
+.section-3 h3 {
+    color: #D5722D;
+    font-size: 36px;
+    font-weight: 600;
+    /* margin-left: 39px; */
+    /* margin-left: 50px; */
+}
+
+.box-1 {
+    width: 296px;
+    height: max-content;
+    border: 3px solid #D5722D;
+    border-radius: 45px;
+    padding: 10px 15px;
+}
+
+.parent-div {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 65px;
+    justify-content: center;
+}
+
+.box-2 {
+    width: 296px;
+    /* height: max-content; */
+    border: 3px solid #D5722D;
+    border-radius: 45px;
+    padding: 10px 15px;
+}
+
+.box-3 {
+    width: 296px;
+    height: max-content;
+    border: 3px solid #D5722D;
+    border-radius: 45px;
+    padding: 10px 15px;
+}
+
+.bible-img img {
+    width: 352px;
+    margin-left: -25px;
+    height: 200px;
+    margin-top: -30px;
+}
+
+.fire-img img {
+    width: 287px;
+    margin-left: 5px;
+    margin-top: 17%;
+}
+
+.cool-waters-img img {
+    width: 247px;
+    margin-left: 24px;
+    height: 155px;
+    margin-top: 38px;
+}
+
+.common {
+    width: 280px;
+    height: 190px;
+}
+
+
+/* footer */
+
+.parent-footer {
+    background-color: rgb(42, 40, 39);
+    display: flex;
+    padding-top: 20px;
+    padding-bottom: 27px;
+    justify-content: space-around;
+    width: 100%;
+    gap: 40px;
+    margin-top: 10%;
+}
+
+.middle-man-footer {
+    display: contents;
+}
+
+.contents1 a {
+    color: #fff;
+    text-decoration: none;
+    font-family: 'Roboto', sans-serif;
+}
+
+.contents1 {
+    display: grid;
+    gap: 33px;
+    font-family: 'Roboto', sans-serif;
+}
+
+.ft-title {
+    font-size: xx-large;
+    color: lightblue;
+}
+
+
+/* media-queries*/
+
+
+/* laptop(1024- layout) */
+
+@media(max-width:1024px) {
+    .items a {
+        font-size: 20px;
+    }
+    .welcome-text h1 {
+        font-weight: 600;
+    }
+    .parent-div {
+        display: grid;
+    }
+}
+
+
+/* tablet-view */
+
+@media(max-width:768px) {
+    .hamburger {
+        display: block;
+    }
+    .hamburger.active .bar:nth-child(2) {
+        opacity: 0;
+    }
+    .hamburger.active .bar:nth-child(1) {
+        transform: translateY(8px) rotate(45deg);
+    }
+    .hamburger.active .bar:nth-child(3) {
+        transform: translateY(-8px) rotate(-45deg);
+    }
+    .nav-items {
+        position: absolute;
+        top: -500px;
+        gap: 0;
+        flex-direction: column;
+        background-color: #DFDFDF;
+        width: 100%;
+        text-align: center;
+        transition: 0.3s;
+    }
+    .items {
+        margin: 16px 0;
+    }
+    .arrow {
+        display: none;
+    }
+    .nav-items.active {
+        top: -15px;
+        z-index: 22;
+        width: 86%;
+        right: 70px;
+        padding-bottom: 9%;
+        align-items: center;
+    }
+    .logo img {
+        position: relative;
+        top: 0 !important;
+    }
+    #nav-bar {
+        height: 90px;
+        margin-top: 2%;
+        padding: 1px 20px;
+    }
+    .sign-in {
+        width: 150px;
+    }
+    .section-1 {
+        margin-top: 0;
+        max-height: 500px;
+    }
+    .arrow {
+        padding-top: 120px !important;
+        margin-right: 20px !important;
+    }
+    .welcome-arrow {
+        margin-top: 9rem;
+    }
+    .welcome-text h1 {
+        font-weight: 900;
+        font-size: 71px;
+        margin-bottom: -35px;
+    }
+    .welcome-text h3 {
+        font-size: 26px;
+        font-weight: 600;
+        line-height: 32px;
+        margin-bottom: -19px;
+    }
+    .welcome-text h4 {
+        font-size: 16px !important;
+    }
+    .logo-center {
+        margin-top: 0;
+    }
+    .section-2 {
+        margin-top: 25px;
+    }
+    .first-info {
+        line-height: 25px;
+        /* letter-spacing: 2px; */
+        font-weight: 400;
+    }
+    .second-info {
+        line-height: 25px !important;
+        font-weight: 400;
+        letter-spacing: 0 !important;
+        padding-inline-end: 3% !important;
+    }
+    .third-class {
+        line-height: 25px !important;
+        font-weight: 400;
+        padding-inline-end: 30px !important;
+    }
+    .fourth-class {
+        line-height: 25px !important;
+        font-weight: 400;
+        padding-inline-end: 52px;
+    }
+    .parent-div {
+        display: grid !important;
+    }
+    .section-3 h3 {
+        text-align: center;
+        margin-left: 23px;
+    }
+    .contents1 {
+        gap: 20px !important;
+        width: min-content;
+    }
+    /* .sermon {
+        position: relative;
+        left: -30px;
+    } */
+}
+
+
+/* mobile-view */
+
+@media(max-width: 425px) {
+    .welcome-arrow {
+        position: relative;
+        transform: translate(12px, -430px);
+        color: #fff;
+        top: 115px;
+        margin-left: -20px;
+        font-family: 'Montserrat', sans-serif;
+    }
+    .welcome-text h1 {
+        font-size: 245%;
+        margin-bottom: -18px;
+    }
+    .arrow {
+        display: none;
+    }
+    .welcome-text h3 {
+        font-size: 18px;
+        line-height: 19px;
+        margin-bottom: -14px;
+    }
+    .welcome-text h4 {
+        font-size: 10px !important;
+    }
+    /* .welcome-text {
+               line-height: 16px;
+           } */
+    .section-1 {
+        margin-bottom: 60px;
+    }
+    .section-2 {
+        margin-top: -60% !important;
+        padding: 0 5px;
+    }
+    .section-3 {
+        margin-left: 0 !important;
+    }
+    .section-3 h3 {
+        margin-left: 0;
+    }
+    .parent-footer {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        padding-left: 16px;
+        place-items: center;
+    }
+    .contents1 {
+        width: 0 !important;
+    }
+}
+
+
+/* @media(min-width: 320px) {
+    .box-1 {
+        width: 263px;
+    }
+    .box-2 {
+        width: 263px;
+    }
+    .box-3 {
+        width: 263px;
+    }
+    .fire-img img {
+        width: 262px;
+        margin-top: 17%;
+    }
+    .cool-waters-img img {
+        width: 220px;
+        margin-left: 22px;
+        height: 125px;
+        margin-top: 38px;
+    }
+    .bible-img img {
+        width: 310px;
+    }
+} */
